--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Samuzero15 (Samuel Marquez)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
@@ -19,8 +20,8 @@
     "lorem-ipsum": "^2.0.4",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.7",
+    "ol": "^6.13.0",
     "passport": "^0.5.2",
-    "rest-api-handler": "^2.22.14",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
