--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.7",
     "ol": "^6.13.0",
+    "old-input": "^1.1.0",
     "passport": "^0.5.2",
     "xmlhttprequest": "^1.8.0"
   },
