Finiquitando backend, Terminando Frontend.

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ MONGODB_URL = "mongodb://localhost/patitas"
 API_MASCOTAS = "http://localhost:5000/api/mascotas/"
 API_PERSONAL = "http://localhost:5000/api/personal/"
 API_HISTORIALES = "http://localhost:5000/api/historiales/"
+API_ADOPCIONES = "http://localhost:5000/api/adopciones/"
+API_DUENOS = "http://localhost:5000/api/duenos/"
 SESSION_SECRET = "mi sucio secretito"
