--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
+    "leaflet-easyprint": "^2.1.9",
     "lorem-ipsum": "^2.0.4",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.7",
